# Octave-Gesture-Control-Application

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  electron-builder.yml  gemini_share_22d345728bc4.html  main.py  package-lock.json  package.json  requirements.txt  service.py  service.spec  start_octave.bat
action_engine/: app_launcher.py  brightness_control.py  scroll_control.py  system_actions.py  volume_control.py
api_engine/: command_bridge.py
config/: context_mapping.json  gesture_mapping.json  settings.json
data/: gesture_mappings.txt
dynamic_engine/: cursor_control.py  drs_gesture.py  family_detector.py  grasp_control.py  magnitude_control.py  motion_utils.py  navigation_control.py  rotation_control.py  scroll_control.py
intent_engine/: cooldown_manager.py  intent_resolver.py  mode_manager.py  stability_filter.py
intent_engine/context_engine/: contextual_intent_engine.py  intent_adapter.py
ml/: feature_extraction.py  requirements.txt  service.py
ml/config/: default_mapping.json  override_state.json  settings.csv  user_mapping.json
ml/runtime/: camera_manager.py  dynamic_inference_runner.py  gates.py  hand_ingestion.py  preview_overlay.py  priority_router.py  static_inference_runner.py  types.py
ml/training/: __init__.py  collector.py  train_dynamic.py  train_static.py
ml_engine/: collect_static_data.py  feature_extraction.py  gesture_manager.py  manage_static_gestures.py  static_inference.py  static_model.py  static_runtime.py  train_static.py
ml_engine/data/: label_map.json
screen_engine/: screen_capture.py  semantic_extractor.py
scripts/: run-electron-vite.cjs
src/: main.cpp
src/action/: action_executor.cpp  action_executor.hpp  desktop_actions.cpp  desktop_actions.hpp
src/bus/: bounded_channel.hpp  event_bus.hpp
src/context/: context_provider.cpp  context_provider.hpp  context_registry.cpp  context_registry.hpp  uia_helper.cpp  uia_helper.hpp
src/core/: context_snapshot.hpp  continuous_action.hpp  event_header.hpp  gesture_event.hpp  intent_event.hpp  interaction_stabilizer.cpp  interaction_stabilizer.hpp  logging.hpp  voice_event.hpp
src/decision/: decision_engine.cpp  decision_engine.hpp
src/heuristics/: HeuristicsTracker.cpp  HeuristicsTracker.hpp
src/intent/: gesture_mapping_registry.cpp  gesture_mapping_registry.hpp  intent_normalizer.cpp  intent_normalizer.hpp
src/main/: engine-service.js  (+2 more)
ui/: package-lock.json  package.json
utils/: helpers.py
voice_engine/: vosk_listener.py
(+52 files in other folders)
